--- a/manifest.json
+++ b/manifest.json
@@ -5,19 +5,17 @@
   "manifest_version": 3,
 
   "background": {
-    "service_worker": "src.js"
+    "service_worker": "js/src.js"
   },
 
   "content_scripts": [
     {
-      "js": ["content.js"],
+      "js": ["js/content.js"],
       "matches": ["*://*.youtube.com/watch?*"]
     }
   ],
 
   "permissions": [
-    "declarativeNetRequestFeedback",
-    "declarativeNetRequest",
     "contextMenus",
     "webRequest",
     "downloads",
