--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: node ./scripts/merge.js
-      - run: mv -t out/ js/ icons/ manifest.json
+      - run: mkdir out/ && mv -t out/ js/ icons/ manifest.json
       - uses: actions/upload-artifact@v2
         with:
           name: ytdwl.zip
