--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Download youtube Audio",
   "manifest_version": 2,
-  "content_security_policy": "script-src 'self' https://unpkg.com; object-src 'self'",
 
   "background": {
     "scripts": [
@@ -17,7 +16,7 @@
 
   "content_scripts": [
     {
-      "js": ["content_scripts/title.js"],
+      "js": ["js/content.js"],
       "matches": ["*://*.youtube.com/watch?*"]
     }
   ],
