--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -14,6 +14,12 @@ jobs:
 
       - name: Copy files into separate directory
         run: mkdir ytdwl && cp -vr manifest.json src/ js/ icons/ html/ ytdwl/
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ytdwl
+          path: ytdwl/
         
       - name: Get tag name
         run: echo "::set-output name=version::$(node ./scripts/get-tag.js)"
@@ -22,6 +28,7 @@ jobs:
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
-          artifact: "ytdwl/"
+          allowUpdates: true
+          artifact: "ytdwl.zip"
           tag: ${{ steps.version_tag.outputs.version }}
           token: ${{ secrets.GITHUB_TOKEN }}
