wip feat: download playlists

--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
 
   "permissions": [
     "*://*.youtube.com/*",
-    "*://*.googlevideo.com/videoplayback?*",
+    "*://*/videoplayback?*",
     "webRequest",
     "tabs",
     "contextMenus",
