--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -6,14 +6,44 @@ on:
       - master
 
 jobs:
-  pack:
+  build:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        working-directory: ./
+
+      - name: Install dependencies
+        run: |
+          npm ci
+          npm build
+          npm test
+
+      - name: Rename build
+        run: mv ./build ./html
+        
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: build
+          path: html
+
+  package:
+    needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
+      - name: Download build artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: build
 
       - name: Copy files into separate directory
         run: mkdir ytdwl && cp -vr manifest.json src/ js/ icons/ html/ ytdwl/
+
+      - run: ls -la ytdwl/
 
       - name: Package to zip
         uses: papeloto/action-zip@v1
