chore: split ci and test

--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -19,7 +19,9 @@ jobs:
         run: |
           npm ci
           npm build
-          npm test
+
+      - name: Test
+        run: npm test
 
       - name: Rename build
         run: mv ./build ./html
