--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -19,10 +19,10 @@ jobs:
         run: npm ci
 
       - name: Test
-        run: npm test
+        run: npm run test
 
       - name: Build frontend
-        run: npm build
+        run: npm run build
 
       - run: ls -la
         
