--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -36,6 +36,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        
       - name: Download build artifact
         uses: actions/download-artifact@v2
         with:
