fix: inline chunk

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,8 +29,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "set \"INLINE_RUNTIME_CHUNK=false\" && react-scripts build",
-    "build:dev": "rm -rf ../html/ && npm run build && mv build/ ../html/",
+    "build": "react-scripts build",
+    "build:dev": "rm -rf ../html/ && set \"INLINE_RUNTIME_CHUNK=false\" && npm run build && mv build/ ../html/",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --coverage"
