--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -11,6 +11,8 @@ jobs:
     defaults:
       run:
         working-directory: ./frontend
+    env:
+      INLINE_RUNTIME_CHUNK: false
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -38,7 +40,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        
+
       - name: Download build artifact
         uses: actions/download-artifact@v2
         with:
