--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -23,7 +23,12 @@
     "noUnusedParameters": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "paths": {
+      "@ytdwl": [
+        "../ts/@types/index.d.ts"
+      ]
+    }
   },
   "include": [
     "src"
