fix: playlist downloader

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -23,12 +23,7 @@
     "noUnusedParameters": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
-    "baseUrl": "src",
-    "paths": {
-      "@ytdwl": [
-        "../ts/@types/index.d.ts"
-      ]
-    }
+    "baseUrl": "src"
   },
   "include": [
     "src"
