--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:dev": "rm -rf ../html/ && set \"INLINE_RUNTIME_CHUNK=false\" && npm run build && mv build/ ../html/",
+    "build:dev": "set \"INLINE_RUNTIME_CHUNK=false\" && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --coverage"
