--- a/ts/package.json
+++ b/ts/package.json
@@ -4,7 +4,7 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "build": "npx tsc"
+    "build": "tsc"
   },
   "types": "@types/index.d.ts"
 }
